--- a/client/edit.scss
+++ b/client/edit.scss
@@ -56,3 +56,6 @@
 	top: auto;
 	bottom:-1px;
 }
+.projectarticle.add{
+	margin-bottom:74px;
+}
