--- a/client/style.scss
+++ b/client/style.scss
@@ -180,7 +180,6 @@ section{
 	        columns:295px 3;
 		position: relative;
 		top:-23px;
-		min-height: 74px;
 
 		&>ul, &>div{display:inline-block;margin:2px}
 	}
